--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+     <nav class="navbar navbar-inverse">
+      <div class="container">
+      <%= link_to 'Person', root_path, class: "navbar-brand" %>
+        <ul class="nav navbar-nav pull-right">
+          <% if user_signed_in? %>
+            <li><%= link_to 'Setting', edit_user_registration_path %></li>
+            <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Join', new_user_registration_path %></li>
+            <li><%= link_to '登入', user_session_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>  
+
     <%= yield %>
   </body>
 </html>
