--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,15 @@
      <nav class="navbar navbar-inverse">
       <div class="container">
       <%= link_to 'Person', root_path, class: "navbar-brand" %>
+      <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+          <li><%= link_to 'New Item', new_item_path %></li>
+          <li><%= link_to 'About Me', welcomes_about_me_path %></li>
+        <% end %>
+      </ul>
         <ul class="nav navbar-nav pull-right">
           <% if user_signed_in? %>
-            <li><%= link_to 'About Me', welcomes_about_me_path %></li>
+            
             <li><%= link_to 'Setting', edit_user_registration_path %></li>
             <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
           <% else %>
