--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,13 @@
 <div class="col-md-6 col-md-offset-3">
+   
+  <% if @item.errors.any? %>
+    <ul>
+      <% @item.errors.full_messages.each do |mas| %>
+        <li><%= mas %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <%= form_for @item do |f| %>
     <div class="form-group">
       <%= f.label :title, '活動名稱' %>
