--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,14 +1,14 @@
 <div class="col-md-6 col-md-offset-3">
    
-  <% if @item.errors.any? %>
+  <% if item.errors.any? %>
     <ul>
-      <% @item.errors.full_messages.each do |mas| %>
+      <% item.errors.full_messages.each do |mas| %>
         <li><%= mas %></li>
       <% end %>
     </ul>
   <% end %>
 
-  <%= form_for @item do |f| %>
+  <%= form_for item do |f| %>
     <div class="form-group">
       <%= f.label :title, '活動名稱' %>
       <%= f.text_field :title, class: 'form-control' %>
