--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class='text-center'>New Item</h1>
+<h1 class='text-center'>Edit Item</h1>
 
 <%= render partial: 'form', locals: { item: @item } %>
