using ffaker gem create fake Itmes data

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,4 @@
 <h2><%= @item.title %></h2>
+<h4>[ <%= @item.genre.name %> ]</h4>
 <p>時間： <%= @item.date %>地點：<%= @item.location %></p>
-<p><%= @title.intro %></p>
+<p><%= @item.intro %></p>
