--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -10,6 +10,9 @@
 
   <%= form_for item do |f| %>
     <div class="form-group">
+      <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "請選擇活動分類" }, {class: 'form-control'} %>
+    </div>
+    <div class="form-group">
       <%= f.label :title, '活動名稱' %>
       <%= f.text_field :title, class: 'form-control' %>
     </div>
