--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,7 @@
 <div class="col-md-8">
   <% @items.each do |item| %>
     <div class="col-md-6">
+      <h3>[ <%= item.genre.name %> ]</h3>
       <h3><%= link_to item.title, item_path(item)  %></h3>
       <p>時間： <%= item.date %> 地點：<%= item.location %></p>
       <div class="button-group">
@@ -13,5 +14,9 @@
   <% end %>
 </div>
 <div class="col-md-4">
-  <h1>Genre </h1>
+  <h1 class="text-center">Genre </h1>
+  <h3><%= link_to "全部活動", items_path %></h3>
+  <% @genres.each do |genre| %>
+  <h3><%= link_to genre.name, genre_path(genre) %></h3>
+  <% end %>
 </div>
