--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Items Page</h1>
 <div class="col-md-8">
+  <h1>活動資訊</h1>
   <% @items.each do |item| %>
     <div class="col-md-6">
       <h3>[ <%= item.genre.name %> ]</h3>
@@ -14,9 +14,16 @@
   <% end %>
 </div>
 <div class="col-md-4">
-  <h1 class="text-center">Genre </h1>
-  <h3><%= link_to "全部活動", items_path %></h3>
-  <% @genres.each do |genre| %>
-  <h3><%= link_to genre.name, genre_path(genre) %></h3>
-  <% end %>
+  <div class="text-center">
+    <h1> 選擇活動類型 </h1>
+    <br>
+    <ul class="nav nav-pills nav-stacked">
+      <li role="presentation" class="active" ><%= link_to "全部活動", items_path %></li>
+      <br>
+      <% @genres.each do |genre| %>
+      <li role="presentation"><%= link_to genre.name, genre_path(genre) %></li>
+      <br>
+      <% end %>
+    </ul>
+  </div>
 </div>
