--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
 <h1>User Profile</h1>
+
+<h3><%= @user.name %></h3>
+<p><%= @user.intro %></p>
+
+<% if @user == current_user %>
+  <%= link_to 'Edit Profile', edit_user_path(@user), class: 'btn btn-primary' %>
+<% end %>
