--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,12 @@
 <%= form_for @user do |f| %>
 
   <div class="form-group">
+    <%= f.label :avatar, '大頭照上傳' %>
+    <%= image_tag @user.avatar.url(:thumb) if @user.avatar?  %>
+    <%= f.file_field :avatar %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
