add uew name to navbar and item index%show page

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,5 @@
 <h2><%= @item.title %></h2>
 <h4>[ <%= @item.genre.name %> ]</h4>
 <p>時間： <%= @item.date %>地點：<%= @item.location %></p>
+<p> 主辦人：<%= @item.user.name %></p>
 <p><%= @item.intro %></p>
