--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         <ul class="nav navbar-nav pull-right">
           <% if user_signed_in? %>
             <li><%= link_to '後台', admin_genres_path %></li>
+            <li><p class="navbar-text">Hi, <%= current_user.name %></p></li>
             <li><%= link_to 'User Profile', user_path(current_user) %></li>
             <li><%= link_to 'Setting', edit_user_registration_path %></li>
             <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
