add kaminari for user&item index page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,11 @@
       <hr>
     </div>
   <% end %>
+  <div class="text-center">
+    <%= paginate @items %>
+  </div>
 </div>
+
 <div class="col-md-4">
   <div class="text-center">
     <h1> 選擇活動類型 </h1>
