--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,6 +4,12 @@
   <p>時間： <%= @item.date %>地點：<%= @item.location %></p>
   <p> 主辦人：<%= @item.user.name %></p>
   <p><%= @item.intro %></p>
+  <% if @item.user_id == current_user.id || current_user.admin? %>
+    <%= link_to 'Edit', edit_item_path(@item), class: 'btn btn-primary' %>
+  <% end %>
+  <% if current_user.admin? %>
+    <%= link_to 'Trash It', item_path(@item), method: :delete, data: { confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+  <% end %>
 </div>
 
 <div class="col-md-6">
@@ -25,8 +31,8 @@
           <p><%= simple_format comment.content %></p>
           <em><%= time_ago_in_words(comment.created_at) %> </em>
           <% if  comment.user_id == current_user.id %>
-              <%= link_to 'Destory', item_comment_path(@item, comment), method: :delete, data: {confirm: "Are you sure?"} %>
-            <% end %>
+            <%= link_to 'Destory', item_comment_path(@item, comment), method: :delete, data: {confirm: "Are you sure?"} %>
+          <% end %>
         <% end %>
     </div>
   </div>
