--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,6 +17,7 @@
   <% else %>
     <img src="https://api.fnkr.net/testimg/100x100/00CED1/FFF/?text=img+placeholder">
   <% end %>
+  <%= link_to 'Follow', followships_path(following_id: user), method: :post, class: "btn btn-primary" %>
   <hr>
 </div>
 <% end %>
