--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   <body>
      <nav class="navbar navbar-inverse">
       <div class="container">
-      <%= link_to 'Person', root_path, class: "navbar-brand" %>
+      <%= link_to 'Person', items_path, class: "navbar-brand" %>
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li><%= link_to 'New Item', new_item_path %></li>
+          <li><%= link_to 'New Event', new_item_path %></li>
           <li><%= link_to 'About Me', welcomes_about_me_path %></li>
         <% end %>
       </ul>
