--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <div>
   <ul class="nav nav-tabs">
     <li role="presentation"><%= link_to '活動列表', items_path %></li>
-    <li role="presentation"  class="active"><%= link_to '人物專欄', users_path %></li>
+    <li role="presentation"  class="active"><%= link_to '人物專欄', users_path 
+    %></li>
   </ul>
 </div>
 
