--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,6 +3,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><%= link_to '活動列表', items_path %></li>
       <li role="presentation"><%= link_to '人物專欄', users_path %></li>
+      <li role="presentation"><%= link_to '十大熱門', ranking_items_path %></li>
     </ul>
   </div>
   
