--- a/app/views/items/ranking.html.erb
+++ b/app/views/items/ranking.html.erb
@@ -6,7 +6,7 @@
       <li role="presentation" class= "active"><%= link_to '十大熱門', ranking_items_path %></li>
     </ul>
   </div>
-  
+  <h1>Top 10 熱門活動 <small>(按讚數最高)</small></h1>
   <% @items.each do |item| %>
     <div class="col-md-6">
       <h3>[ <%= item.genre.name %> ]</h3>
