--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -2,6 +2,7 @@
   <ul class="nav nav-tabs">
       <li role="presentation" class="active"><%= link_to '活動列表', items_path %></li>
       <li role="presentation"><%= link_to '人物專欄', users_path %></li>
+      <li role="presentation"><%= link_to '十大熱門', ranking_items_path %></li
     </ul>
   <h1>活動資訊</h1>
   <% @items.each do |item| %>
