show user following_event nember on user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <ul class="list-unstyled  list-inline">
     <li><strong><%= @user.items.size %></strong> 已建立的活動</li>
     <li><strong><%= @user.comments.size %></strong> 參與討論的活動</li>
-    <li><strong><%= @user.followships.size %></strong> Following</li>
+    <li><strong><%= @user.followships.size %></strong> Following_events</li>
   </ul>
   <% if @user.avatar? %>
     <p><%= image_tag @user.avatar.url(:medium) %></p>
