--- a/app/views/users/liked_items.html.erb
+++ b/app/views/users/liked_items.html.erb
@@ -2,17 +2,17 @@
   <div>
     <ul class="nav nav-tabs">
       <h2><%= @user.name %></h2>
-      <li role="presentation"  class="active"><%= link_to '我建立的活動', user_path(@user) %></li>
+      <li role="presentation"><%= link_to '我建立的活動', user_path(@user) %></li>
       <li role="presentation"><%= link_to '參與討論的活動', comments_user_path(@user) %></li>
-      <li role="presentation"><%= link_to '喜歡的活動', liked_items_user_path(@user)  %></li>
+      <li role="presentation" class="active"><%= link_to '喜歡的活動', liked_items_user_path(@user) %></li>
       <li role="presentation"><%= link_to '追蹤的人', followings_user_path(@user) %></li>
     </ul>
   </div>
   <%= render partial: 'shared/user_profile', locals: { user: @user } %>
 </div>
 <div class="col-md-5 text-center">
-  <h1><%= @user.name %> 建立的活動</h1>
-  <% @user_items.each do |item| %>
+  <h1><%= @user.name %> 喜歡的活動</h1>
+  <% @liked_items.each do |item| %>
     <h2><%= link_to item.title, item_path(item) %></h2>
     <p>[ <%= item.genre.name%> ]</p>
   <% end %>
