change page TOP 10 title

--- a/app/views/items/ranking.html.erb
+++ b/app/views/items/ranking.html.erb
@@ -3,7 +3,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation"><%= link_to '活動列表', items_path %></li>
       <li role="presentation"><%= link_to '人物專欄', users_path %></li>
-      <li role="presentation" class= "active"><%= link_to '十大熱門', ranking_items_path %></li>
+      <li role="presentation" class= "active"><%= link_to '十大熱門活動', ranking_items_path %></li>
     </ul>
   </div>
   <h1>Top 10 熱門活動 <small>(按讚數最高)</small></h1>
