--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,10 @@
   <p> 主辦人：<%= @item.user.name %></p>
   <p><%= @item.intro %></p>
   <% if @item.user_id == current_user.id || current_user.admin? %>
-    <%= link_to 'Edit', edit_item_path(@item), class: 'btn btn-primary' %>
+    <%= link_to 'Edit', edit_item_path(@item), class: 'badge badge-primary' %>
   <% end %>
   <% if current_user.admin? %>
-    <%= link_to 'Trash It', item_path(@item), method: :delete, data: { confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+    <%= link_to 'Trash It', item_path(@item), method: :delete, data: { confirm: 'Are you sure?'}, class: 'badge badge-danger' %>
   <% end %>
 </div>
 
