add navtab partial for admin page

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,4 +1,7 @@
-<div class="col-md-6 col-md-offset-3">
+
+
+  <%= render partial: 'admin/shared/navtab' %>
+  
   <h1>Admin Create Genre</h1>
   <div class="col-md-6">
     <%= render partial: 'form', locals: { genre: @genre } %>
@@ -27,7 +30,6 @@
       <% end %>
     </tbody>
   </table>
-  
-</div>
+
 
       
