--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
-  <div class="event_list">
-
+  <%= render partial: 'admin/shared/navtab' %>
     <table class="table table-striped table-bordered">
         <thead>
           <tr>
