--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,22 +1,25 @@
-<div class="user_list">
-  <table class="table table-striped table-bordered">
-    <thead>
+<div class="row">
+  <%= render partial: 'admin/shared/navtab' %>
+  <div class="user_list">
+    <table class="table table-striped table-bordered">
       <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">User Name</th>
-            <th scope="col">User role</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @users.each do |user| %>
+        <thead>
             <tr>
-              <th><%= user.id %></th>
-              <td><%= user.name %></td>
-              <td><%= user.role %></td>
+              <th scope="col">ID</th>
+              <th scope="col">User Name</th>
+              <th scope="col">User role</th>
             </tr>
-          <% end %>
-        </tbody>
-    </thead>
-  </table>
+          </thead>
+          <tbody>
+            <% @users.each do |user| %>
+              <tr>
+                <th><%= user.id %></th>
+                <td><%= user.name %></td>
+                <td><%= user.role %></td>
+              </tr>
+            <% end %>
+          </tbody>
+      </thead>
+    </table>
+  </div>
 </div>
