--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,25 +1,53 @@
 <div class="row">
   <%= render partial: 'admin/shared/navtab' %>
   <div class="user_list">
-    <table class="table table-striped table-bordered">
-      <thead>
+    <div class="col-md-8">
+      <table class="table table-striped table-bordered">
         <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">User Name</th>
-              <th scope="col">User role</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @users.each do |user| %>
+          <thead>
               <tr>
-                <th><%= user.id %></th>
-                <td><%= user.name %></td>
-                <td><%= user.role %></td>
+                <th scope="col"><%= sort_link(@ransack, :id) %></th>
+                <th scope="col"><%= sort_link(@ransack, :name) %></th>
+                <th scope="col"><%= sort_link(@ransack, :role) %></th>
               </tr>
-            <% end %>
-          </tbody>
-      </thead>
-    </table>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <th><%= user.id %></th>
+                  <td><%= user.name %></td>
+                  <td><%= user.role %></td>
+                </tr>
+              <% end %>
+            </tbody>
+        </thead>
+      </table>
+    </div>
+    <div class="col-md-4">
+      <h3>Search</h3>
+      <%= search_form_for @ransack , url: admin_users_path do |f| %>
+
+        <div>
+          <%= f.label :id_cont %>
+          <%= f.search_field :id_cont %>
+        </div>
+
+        <div>
+          <%= f.label :name_ %>
+          <%= f.search_field :name_cont %>
+        </div>
+
+        <div>
+          <%= f.label :role_cont %>
+          <%= f.search_field :role_cont  %>
+        </div>
+
+        <div>
+          <%= f.submit '搜尋', class: 'btn btn-primary' %>
+          <%= button_tag "重置", type: :reset, class: 'btn btn-default' %>
+        </div>
+
+      <% end %>
+    </div>
   </div>
 </div>
