add register create action

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,8 +13,23 @@
   <% if current_user.admin? %>
     <%= link_to 'Trash It', item_path(@item), method: :delete, data: { confirm: 'Are you sure?'}, class: 'badge badge-danger' %>
   <% end %>
-</div>
+  <br>
+  <hr>
 
+  <div class="register">
+    <%= form_for [@item, @register] do |f| %>
+     <h2>即刻報名</h2> <br>
+
+      <div class="form-group">
+        <%= f.label :content, '請填寫簡單句子，確認你不是機器人 ：)' %>
+        <%= f.text_field :content, class: 'form-control', placeholder: '按下送出後，及報名成功' %>
+      </div>   
+
+      <%= f.submit '送出', class: 'btn btn-default' %>
+    <% end %>
+  </div>
+
+</div>
 <div class="col-md-6">
   <div class="col-md-offset-2">
     <div class="comment-form">
