add registers_count for user and item table

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,6 +17,7 @@
   <hr>
 
   <div class="register">
+    <h3>目前有 <%= @item.registers_count %> 報名</h3>
     <% if @item.register?(current_user) || @item.user_id == current_user.id || current_user.admin? %>
        <% @item.registers.each do |register| %>
         <% if current_user == register.user %>
