--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       </ul>
         <ul class="nav navbar-nav pull-right">
           <% if user_signed_in? %>
-            <li><%= link_to '後台', admin_genres_path if current_user.admin? %></li>
+            <li><%= link_to '後台', admin_users_path if current_user.admin? %></li>
             <li><p class="navbar-text">Hi, <%= current_user.name %></p></li>
             <li><%= link_to 'User Profile', user_path(current_user) %></li>
             <li><%= link_to 'Setting', edit_user_registration_path %></li>
