--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
         <h2>即刻報名</h2> <br>
         <div class="form-group">
           <%= f.label :content, '請填寫簡單句子，確認你不是機器人 ：)' %>
-          <%= f.text_area :content, class: 'form-control', placeholder: '按下送出後，及報名成功' %>
+          <%= f.text_area :content, rows: "5", class: 'form-control', placeholder: '按下送出後，及報名成功' %>
         </div>   
         <%= f.submit '送出', class: 'btn btn-default' %>
       <% end %>
