add another follow&unfollow function

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -16,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @genres.each do |genre| %>
+      <%= @genres.each do |genre| %>
       <tr>
         <th scope="row"><%= genre.id %></th>
         <td><%= genre.name %></td>
